--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -94,11 +94,11 @@
 
     /* Breakpoints
  --------------------------------------------------------------------------------------------------------------- */
-    $break-vs: 320px; // old phone
-    $break-small: 480px; // modern phone
-    $break-small-medium: 600px; // modern larger phone
-    $break-medium: 880px; // tablet
-    $break-large: 1120px; // laptop
-    $break-big: 1240px; // desktop
-    $break-vb: 1440px; // big screens!
+    $break-vs: 320px; // small phones
+    $break-small: 480px; // medium phone
+    $break-small-medium: 660px; // large phone
+    $break-medium: 880px; // big phone & tablet
+    $break-large: 1120px; // tablet & laptop
+    $break-big: 1240px; // laptop
+    $break-vb: 1440px; // desktop
 }
