--- a/src/sass/partials/_footer.scss
+++ b/src/sass/partials/_footer.scss
@@ -57,6 +57,10 @@ footer {
             margin-bottom: 1.5rem;
             display: block;
         }
+
+        .phone {
+            color: var(--white);
+        }
     }
 
     .social {
