--- a/src/sass/pages/_what-we-do.scss
+++ b/src/sass/pages/_what-we-do.scss
@@ -24,23 +24,39 @@
             color: var(--mid-black);
         }
 
-        .image {
-            grid-column: 1 / 9;
-            grid-row: 2 / 3;
+        .container {
+            display: grid;
         }
 
+        // layout media queries --------------------------------------------------
+        @media (min-width: 880px) {
+            .container {
+                grid-template-columns: repeat(12, 1fr);
+                grid-gap: 48px;
+            }
+
+            .image {
+                grid-column: 1 / 8;
+                grid-row: 2 / 3;
+            }
+
+            .title {
+                grid-column: 1 / 6;
+                grid-row: 1 / 1;
+            }
+
+            .text {
+                grid-column: 8 / -1;
+                grid-row: 1 / 3;
+            }
+        }
+
+        // style elements -------------------------------------------------------
         .title {
-            grid-column: 1 / 6;
-            grid-row: 1 / 1;
             margin-bottom: 2rem;
             font-size: var(--font-big);
             line-height: 1.09375;
             color: var(--black);
-        }
-
-        .text {
-            grid-column: 8 / -1;
-            grid-row: 1 / 3;
         }
 
         .subtitle {
@@ -92,15 +108,24 @@
         position: relative;
         margin-bottom: 112px;
 
-        &:nth-of-type(odd) {
-            .text {
-                grid-column: 7 / 12;
-            }
-        }
+        display: grid;
+        grid-template-columns: 1fr;
 
-        &:nth-of-type(even) {
-            .text {
-                grid-column: 1 / 6;
+        // layout media queries --------------------------------------------------
+        @media (min-width: 880px) {
+            grid-template-columns: repeat(12, 1fr);
+            grid-gap: 48px;
+
+            &:nth-of-type(odd) {
+                .text {
+                    grid-column: 7 / 12;
+                }
+            }
+
+            &:nth-of-type(even) {
+                .text {
+                    grid-column: 1 / 6;
+                }
             }
         }
 
@@ -115,6 +140,7 @@
             background-repeat: no-repeat;
         }
 
+        // style elements -------------------------------------------------------
         .text {
             padding-top: 1.25rem;
             border-top: 1.5px solid var(--white);
@@ -145,11 +171,26 @@
     .testimonial {
         padding-top: 6rem;
         padding-bottom: 6rem;
+        display: grid;
+        grid-template-columns: 1fr;
 
+        // layout media queries --------------------------------------------------
+        @media (min-width: 880px) {
+            grid-template-columns: repeat(12, 1fr);
+
+            .lh-col {
+                grid-column: 2 / 4;
+            }
+
+            .quote {
+                grid-column: 5 / 12;
+            }
+        }
+
+        // style elements -------------------------------------------------------
         .lh-col {
             padding-top: 0.25rem;
             border-top: 1.5px solid var(--mid-black);
-            grid-column: 2 / 4;
 
             .author,
             .role,
@@ -182,7 +223,6 @@
         }
 
         .quote {
-            grid-column: 5 / 12;
             font-size: 2.75rem;
             line-height: 1.24;
             color: var(--black);
@@ -190,7 +230,7 @@
         }
     }
 
-    // call to action styles -----------------------------------------------
+    // text-image styles ----------------------------------------------------
     .text-image {
         padding-top: 2.25rem;
         margin-bottom: 6rem;
@@ -232,27 +272,62 @@
         }
     }
 
-    .left {
-        .text {
-            grid-column: 3 / 7;
-            grid-row: 1 / 2;
+    // layout media queries --------------------------------------------------
+    @media (min-width: 880px) {
+        .text-image {
+            display: grid;
+            grid-template-columns: repeat(12, 1fr);
+            grid-gap: 48px;
         }
 
-        .image {
-            grid-column: 8 / 12;
-            grid-row: 1 / 2;
+        .left {
+            .text {
+                grid-column: 1 / 7;
+                grid-row: 1 / 2;
+            }
+
+            .image {
+                grid-column: 8 / -1;
+                grid-row: 1 / 2;
+            }
+        }
+
+        .right {
+            .text {
+                grid-column: 8 / -1;
+                grid-row: 1 / 2;
+            }
+
+            .image {
+                grid-column: 1 / 7;
+                grid-row: 1 / 2;
+            }
         }
     }
 
-    .right {
-        .text {
-            grid-column: 8 / 12;
-            grid-row: 1 / 2;
+    @media (min-width: 1120px) {
+        .left {
+            .text {
+                grid-column: 3 / 7;
+                grid-row: 1 / 2;
+            }
+
+            .image {
+                grid-column: 8 / 12;
+                grid-row: 1 / 2;
+            }
         }
 
-        .image {
-            grid-column: 3 / 7;
-            grid-row: 1 / 2;
+        .right {
+            .text {
+                grid-column: 8 / 12;
+                grid-row: 1 / 2;
+            }
+
+            .image {
+                grid-column: 3 / 7;
+                grid-row: 1 / 2;
+            }
         }
     }
 } // close .what-we-do
