--- a/src/sass/pages/_our-work.scss
+++ b/src/sass/pages/_our-work.scss
@@ -28,7 +28,7 @@
         max-width: 1296px;
         padding: 1.25rem 0 0 0;
         margin: 0 auto 72px;
-        display: flex;
+        display: none;
         justify-content: space-between;
         align-items: center;
 
@@ -36,6 +36,10 @@
             margin-bottom: 0.75rem;
             font-size: 30px;
             color: var(--copy);
+        }
+
+        @media (min-width: 1440px) {
+            display: flex;
         }
     }
 }
