--- a/src/sass/partials/_header.scss
+++ b/src/sass/partials/_header.scss
@@ -10,7 +10,7 @@ header {
     justify-content: space-between;
     align-items: center;
     background-color: var(--off-white);
-    z-index: 1000;
+    z-index: 100;
 
     @media (min-width: 880px) {
         align-items: flex-end;
@@ -24,36 +24,33 @@ header {
         }
     }
 
-    .burger {
+    .navicon {
         position: relative;
-        width: 24px;
-        height: 2px;
-        background-color: var(--black);
-
-        @media (min-width: 880px) {
-            display: none;
-        }
+        width: 32px;
+        height: 32px;
+        border: 1.5px solid var(--black);
+        border-radius: 50%;
+        background-color: transparent;
+        transform: translateY(-20px);
 
         &:before,
         &:after {
             position: absolute;
+            top: 50%;
+            left: 50%;
             display: block;
-            width: inherit;
-            height: inherit;
+            width: 20px;
+            height: 1px;
             content: '';
-            background-color: inherit;
+            background-color: var(--black);
         }
 
         &:before {
-            top: -6px;
+            transform: translateX(-50%);
         }
 
         &:after {
-            top: 6px;
+            transform: translateX(-50%) rotate(90deg);
         }
-    }
-
-    .scrolled {
-        // styles to go here
     }
 }
