--- a/src/sass/flx/_work-v1.0.scss
+++ b/src/sass/flx/_work-v1.0.scss
@@ -6,8 +6,8 @@
         display: grid;
         grid-template-columns: repeat(12, 1fr);
         //grid-template-rows: auto;
-        gap: 48px;
-        //    grid-auto-flow: dense;
+        grid-column-gap: 48px;
+        //grid-auto-flow: dense;
     }
 
     .grid-item {
@@ -21,11 +21,11 @@
 
         @media (min-width: 768px) {
             grid-column: auto / span 6;
+            margin-bottom: 6rem;
         }
 
         @media (min-width: 960px) {
             grid-column: auto / span 4;
-            margin-bottom: 8px;
         }
 
         &.wide {
@@ -70,7 +70,7 @@
 .row-empty-tall-4,
 .row-8-empty,
 .row-4-8 {
-    margin-bottom: 48px;
+    margin-bottom: 96px;
 
     img {
         width: 100%;
@@ -80,7 +80,7 @@
     @media (min-width: 600px) {
         display: grid;
         grid-template-columns: repeat(12, 1fr);
-        gap: 48px;
+        grid-gap: 48px;
 
         article {
             grid-column: 1 / -1;
