--- a/src/sass/partials/_header.scss
+++ b/src/sass/partials/_header.scss
@@ -24,33 +24,39 @@ header {
         }
     }
 
-    .navicon {
-        position: relative;
-        width: 32px;
-        height: 32px;
-        border: 1.5px solid var(--black);
-        border-radius: 50%;
-        background-color: transparent;
-        transform: translateY(-20px);
-
-        &:before,
-        &:after {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            display: block;
-            width: 20px;
-            height: 1px;
-            content: '';
-            background-color: var(--black);
-        }
-
-        &:before {
-            transform: translateX(-50%);
-        }
-
-        &:after {
-            transform: translateX(-50%) rotate(90deg);
-        }
+    button {
+        display: none;
     }
+
+    /*
+        .navicon {
+            position: relative;
+            width: 32px;
+            height: 32px;
+            border: 1.5px solid var(--black);
+            border-radius: 50%;
+            background-color: transparent;
+            transform: translateY(-20px);
+
+            &:before,
+            &:after {
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                display: block;
+                width: 20px;
+                height: 1px;
+                content: '';
+                background-color: var(--black);
+            }
+
+            &:before {
+                transform: translateX(-50%);
+            }
+
+            &:after {
+                transform: translateX(-50%) rotate(90deg);
+            }
+        }
+    */
 }
