--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -22,6 +22,7 @@
 @use 'pages/archives';
 @use 'pages/archive';
 @use 'pages/our-work';
+@use 'pages/error-404';
 
 //// page-sections
 @use 'page-sections/banner';
