--- a/src/sass/post-types/work.scss
+++ b/src/sass/post-types/work.scss
@@ -58,6 +58,7 @@
     @media (min-width: 960px) {
         .primary-content {
             grid-template-columns: repeat(12, 1fr);
+            grid-column-gap: 48px;
         }
 
         .lh-col {
@@ -82,25 +83,21 @@
         }
 
         .details {
-            // sub [nested] grid details
-            @media (min-width: 960px) {
-                display: grid;
-                grid-template-columns: repeat(6, 1fr);
-                grid-template-rows: auto;
-                grid-column-gap: 48px;
+            .sector {
+                grid-column: 1 / 3;
+            }
 
-                .sector {
-                    grid-column: 1 / 3;
-                }
-
-                .awards {
-                    grid-column: 3 / -1;
-                }
-
-                .strategy,
-                .design,
-                .digital {
-                    grid-column: span 2;
+            .what-we-did {
+                @media (min-width: 960px) {
+                    display: grid;
+                    grid-template-columns: repeat(6, 1fr);
+                    grid-template-rows: auto;
+                    grid-column-gap: 48px;
+                    .strategy,
+                    .design,
+                    .digital {
+                        grid-column: span 2;
+                    }
                 }
             }
         }
