--- a/src/sass/post-types/work.scss
+++ b/src/sass/post-types/work.scss
@@ -49,12 +49,14 @@
     }
 
     // primary content media queries ----------------------------------------------
+    // mobile single column grid
     .primary-content {
         margin-bottom: var(--drop-big);
         display: grid;
         grid-template-columns: 1fr;
     }
 
+    // grid applied
     @media (min-width: 960px) {
         .primary-content {
             grid-template-columns: repeat(12, 1fr);
@@ -109,7 +111,7 @@
             color: var(--mid-black);
         }
 
-        .item {
+        .type {
             font-family: 'cabinet-medium';
             font-size: var(--font-base);
             line-height: 1.35;
@@ -125,20 +127,6 @@
             display: flex;
             flex-direction: column;
         }
-
-        // .sector {
-        //     grid-column: 1 / 3;
-        // }
-
-        // .awards {
-        //     grid-column: 3 / -1;
-        // }
-
-        // .strategy,
-        // .design,
-        // .digital {
-        //     grid-column: span 2;
-        // }
     }
 
     .rh-col {
@@ -147,30 +135,61 @@
         }
     }
 
-    // flexible content styles
-    // -----------------------------------------------------------------------------
+    // flexible content styles -----------------------------------------------------------------------------
     .flexible-content {
         padding-top: 3rem;
         background-color: var(--off-white);
     }
 
-    .half,
+    .single,
     .double,
     .full-width,
     .bleed,
     .text-row,
     .image-text,
-    .testimonial {
+    .testimonial,
+    .media__half-width {
         margin-bottom: var(--drop-medium);
     }
 
+    .single,
+    .double,
+    .full-width,
+    .text-row,
+    .image-text,
+    .testimonial,
+    .media__half-width {
+        width: 100%;
+        max-width: var(--site-width);
+        padding-left: 1.5rem;
+        padding-right: 1.5rem;
+        margin-left: auto;
+        margin-right: auto;
+
+        @media (min-width: 880px) {
+            padding-left: 4.5rem;
+            padding-right: 4.5rem;
+        }
+    }
+
+    .bleed {
+        width: 100%;
+        max-width: 1920px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
     // images
+    .half {
+        grid-column: 1 / 7;
+    }
+
     .double {
         .lh-image {
             grid-column: 1 / 7;
         }
         .rh-image {
-            grid-column: 8 / -1;
+            grid-column: 7 / -1;
         }
     }
 
@@ -180,7 +199,7 @@
 
     // text
     .text-row {
-        padding: 1.5rem 0 0 0;
+        padding-top: 1.5rem;
         margin-bottom: 1.5rem;
 
         .lh-col {
@@ -189,6 +208,10 @@
 
         .rh-col {
             grid-column: 9 / -1;
+
+            p {
+                margin-bottom: var(--drop-small);
+            }
         }
     }
 
@@ -200,6 +223,15 @@
 
         .text {
             grid-column: 9 / -1;
+        }
+
+        p {
+            margin-bottom: var(--drop-small);
+        }
+
+        p:first-of-type {
+            font-family: var(--titling);
+            font-size: var(--font-medium);
         }
     }
 
