--- a/src/sass/post-types/work.scss
+++ b/src/sass/post-types/work.scss
@@ -9,23 +9,29 @@
         margin-bottom: var(--drop-medium);
         display: grid;
         grid-template-columns: 1fr;
+
+        .title {
+            font-size: var(--font-medium);
+            grid-column: 1 / -1;
+            grid-row: 2;
+        }
     }
 
     @media (min-width: 960px) {
         .page-top {
             grid-template-columns: repeat(12, 1fr);
+            grid-column-gap: 48px;
+            align-items: center;
         }
 
         .meta {
             grid-column: 1 / 3;
         }
 
-        .title {
-            grid-column: 8 / -1;
-        }
-
         .excerpt {
             grid-column: 8 / -1;
+            grid-row: 2;
+            line-height: var(--lh-base);
         }
     }
 
